--- a/landing/templates/landing/landing.html
+++ b/landing/templates/landing/landing.html
@@ -1,6 +1,65 @@
 
 {% block content %}
-  
-<h1><a href="{% url "unlimited-home" %}">Unlimited</a></h1>
-            
+{% load static %}
+
+<html>
+    <head>
+        <!-- Required meta tags -->
+       <meta charset="utf-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+       <!-- Bootstrap CSS -->
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+       <link rel="stylesheet" type = "text/css" href="{% static "landing/landing.css"%}">
+       {% if title%}
+       <title>Myles RPG - {{title}}</title>
+       {% else %}
+       <title>Myles RPG</title>
+       {% endif %}
+       <link rel="shortcut icon" type="image/ico" href="{% static 'unlimited/favicon.ico' %}"/>
+        <style>
+            body {
+                background-image: url("{% static 'landing/ocean.jpg' %}");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
+                background-position: center;
+            }
+
+            #gradleft {
+                width: 1%;
+                height: 100%;
+                position: absolute;
+                background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(0,0,0,0));
+            }
+            #gradtop {
+                width: 100%;
+                height: 1%;
+                position: absolute;
+                background-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+            }
+            #gradright {
+                width: 1%;
+                height: 100%;
+                float: right;
+                background-image: linear-gradient(to left, rgba(0,0,0,1), rgba(0,0,0,0));
+            }
+            #gradbottom {
+                width: 100%;
+                height: 1%;
+                position:absolute; bottom:0;
+                background-image: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,0));
+            }
+        </style>
+        
+    </head>
+    <body>
+        
+        <div id="gradleft"></div>
+        <div id="gradright"></div>
+        <div id="gradtop"></div>
+        <div id="gradbottom"></div>
+       <h1><a href="{% url "unlimited-home" %}">Unlimited</a></h1>
+    </body>
+</html>       
 {% endblock content%}
