before making character migration

--- a/landing/templates/landing/landing.html
+++ b/landing/templates/landing/landing.html
@@ -19,7 +19,7 @@
        <link rel="shortcut icon" type="image/ico" href="{% static 'unlimited/favicon.ico' %}"/>
         <style>
             body {
-                background-image: url("{% static 'landing/ocean.jpg' %}");
+                background-image: url("{% static 'landing/cave.jpg' %}");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;
@@ -55,10 +55,7 @@
     </head>
     <body>
         
-        <div id="gradleft"></div>
-        <div id="gradright"></div>
-        <div id="gradtop"></div>
-        <div id="gradbottom"></div>
+    
        <h1><a href="{% url "unlimited-home" %}">Unlimited</a></h1>
     </body>
 </html>       
