--- a/unlimited/templates/unlimited/technique_detail.html
+++ b/unlimited/templates/unlimited/technique_detail.html
@@ -4,11 +4,16 @@
         <img class="rounded-circle article-img" src="{{object.author.profile.pfp.url}}">
         <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="#">{{ object.author }}</a>
+            <a class="mr-2" href="{% url "user-techniques" object.author.username %}">{{ object.author }}</a>
             <small class="text-muted">{{ object.date_created|date:"F j, Y" }}</small>
+           
         </div>
         <h2 class="article-title"> {{ object.name }}</h2>
         <p class="article-content">{{ object.content }}</p>
         </div>
     </article>
+    {% if object.author == user%}
+    <a class="btn btn-secondary btn-sm mb-1" href="{% url "technique-update" object.id %}">Edit</a>
+    <a class="btn btn-danger btn-sm mb-1" href="{% url "technique-delete" object.id %}">Delete</a>
+{% endif %}
 {% endblock content%}
