--- a/unlimited/templates/unlimited/user_techniques.html
+++ b/unlimited/templates/unlimited/user_techniques.html
@@ -1,6 +1,6 @@
 {% extends "unlimited/base.html" %}
 {% block content %}
-    <h1>Blog Home!</h1>
+    <h1 class="mb-3">Tehcniques by {{ view.kwargs.username}} ({{ page_obj.paginator.count }})</h1>
     {% for tech in techniques%}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{tech.author.profile.pfp.url}}">
