--- a/landing/templates/landing/landing.html
+++ b/landing/templates/landing/landing.html
@@ -19,7 +19,7 @@
        <link rel="shortcut icon" type="image/ico" href="{% static 'unlimited/favicon.ico' %}"/>
         <style>
             body {
-                background-image: url("{% static 'landing/cave.jpg' %}");
+                background-image: url("{% static 'landing/Twilight-Pagoda-transformed (1).png' %}");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;
