--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,6 +10,9 @@
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Login</button>
+                <small class="text-muted">
+                    Forgot Password? <a class"ml-2" href="{% url "password-reset"%}">Reset Here</a>
+                </small>
             </div>
         </form>
         <div class="border-top pt-3">
