--- a/unlimited/templates/unlimited/character_form.html
+++ b/unlimited/templates/unlimited/character_form.html
@@ -5,7 +5,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class ="border-bottem mb-4">Add A Character</legend>
+                <legend class ="border-bottem mb-4">Create A Character</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
