--- a/unlimited/templates/unlimited/base.html
+++ b/unlimited/templates/unlimited/base.html
@@ -31,6 +31,7 @@
                   <!-- Navbar Right Side -->
                   <div class="navbar-nav">
                     <a class="nav-item nav-link" href="{% url "technique-create" %}">New Technique</a>
+                    <a class="nav-item nav-link" href="{% url "character-create" %}">New Character</a>
                     {% if user.is_authenticated%}
                       <a class="nav-item nav-link" href="{% url "profile" %}">{{user.username}}</a>
                       <a class="nav-item nav-link" href="{% url "logout" %}">Logout</a>
