--- a/unlimited/templates/unlimited/character_detail.html
+++ b/unlimited/templates/unlimited/character_detail.html
@@ -1,7 +1,7 @@
 {% extends "unlimited/base.html" %}
 {% block content %}
     <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{object.player.profile.pfp.url}}">
+        <img class="rounded-circle article-img" src="{{object.image.url}}">
         <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2" href="{% url "user-techniques" object.player.username %}">{{ object.player }}</a>
@@ -13,7 +13,7 @@
         </div>
     </article>
     {% if object.player == user%}
-    <a class="btn btn-secondary btn-sm mb-1" href="{% url "character-update" object.name %}">Edit</a>
-    <a class="btn btn-danger btn-sm mb-1" href="{% url "character-delete" object.name %}">Delete</a>
+    <a class="btn btn-secondary btn-sm mb-1" href="{% url "character-update" object.slug %}">Edit</a>
+    <a class="btn btn-danger btn-sm mb-1" href="{% url "character-delete" object.slug %}">Delete</a>
 {% endif %}
 {% endblock content%}
