technique form ready

--- a/unlimited/static/unlimited/main.css
+++ b/unlimited/static/unlimited/main.css
@@ -1,5 +1,5 @@
   body {
-    background: #fafafa;
+    background: #161616 !important;
     color: #333333;
     margin-top: 5rem;
   }
@@ -85,3 +85,46 @@
   .asteriskField{
     color:red;
   }
+
+  .select{
+    max-width: 6em;
+  }
+
+
+  /* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+.tabcontent{
+  display: none;
+}
+
+.icon{
+  max-width: 30px;
+  max-height: 30px;
+}
