--- a/unlimited/templates/unlimited/base.html
+++ b/unlimited/templates/unlimited/base.html
@@ -14,6 +14,7 @@
         <title>Myles RPG</title>
         {% endif %}
         <link rel="shortcut icon" type="image/ico" href="{% static 'unlimited/favicon.ico' %}"/>
+        <script src="https://unpkg.com/htmx.org@1.8.4"></script>
     </head>
     <body>
         <header class="site-header">
@@ -54,19 +55,6 @@
                   {% endfor %}
                 {% endif %}
                 {% block content %}{% endblock %}
-              </div>
-              <div class="col-md-4">
-                <div class="content-section">
-                  <h3>Our Sidebar</h3>
-                  <p class='text-muted'>You can put any information here you'd like.
-                    <ul class="list-group">
-                      <li class="list-group-item list-group-item-light">Latest Posts</li>
-                      <li class="list-group-item list-group-item-light">Announcements</li>
-                      <li class="list-group-item list-group-item-light">Calendars</li>
-                      <li class="list-group-item list-group-item-light">etc</li>
-                    </ul>
-                  </p>
-                </div>
               </div>
             </div>
           </main>
