--- a/app/unlimited/templates/unlimited/technique_detail.html
+++ b/app/unlimited/templates/unlimited/technique_detail.html
@@ -11,7 +11,11 @@
         <h2 class="article-title"> {{ object.name }}</h2>
         <p class="article-content">{{ object.content }}</p>
             <div >
-                Used By  <img class="rounded-circle article-img" style="width:5%;height:5%;margin-left:6px;margin-right:6px" src="{{object.character.image.url}}"><a class="mr-2" href="{% url "character-detail" object.character.slug %}">{{ object.character }}</a>
+                {% if tech.character %}
+                    Used By <img class="rounded-circle article-img" style="width:5%;height:5%;margin-left:6px;margin-right:6px" src="{{tech.character.image.url}}"><a class="mr-2" href="{% url "character-detail" tech.character.slug %}">{{ tech.character }}</a>
+                {% else %}
+                    Used By Nobody
+                {% endif %}
             </div>
         </div>
     </article>
