--- a/app/users/templates/users/profile.html
+++ b/app/users/templates/users/profile.html
@@ -42,7 +42,12 @@
                 <h2><a class="article-title" href="{% url "technique-detail" tech.slug %}">{{ tech.name }}</a></h2>
                 <p class="article-content">{{ tech.content }}</p>
                 <div >
-                    Used By  <img class="rounded-circle article-img" style="width:5%;height:5%;margin-left:6px;margin-right:6px" src="{{tech.character.image.url}}"><a class="mr-2" href="{% url "character-detail" tech.character.slug %}">{{ tech.character }}</a>
+                   
+                    {% if tech.character %}
+                        Used By <img class="rounded-circle article-img" style="width:5%;height:5%;margin-left:6px;margin-right:6px" src="{{tech.character.image.url}}"><a class="mr-2" href="{% url "character-detail" tech.character.slug %}">{{ tech.character }}</a>
+                    {% else %}
+                        Used By Nobody
+                    {% endif %}
                 </div>
                 </div>
             </article>
