--- a/app/landing/templates/landing/landing.html
+++ b/app/landing/templates/landing/landing.html
@@ -22,12 +22,12 @@
     <body>
         <div class="flex-grid">
             <div class="col">
-              <div  class="button book glow-button" ><img src = "{% static 'landing/book-symbol.png' %}" height="100%" width="100%"></div>
-              <div  class="button scroll glow-button" ><img src = "{% static 'landing/scroll-symbol.png' %}" height="100%" width="100%"></div>
+              <div  class="button book glow-button" ><img src = "{% static 'landing/book-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
+              <div  class="button scroll glow-button" ><img src = "{% static 'landing/scroll-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
             </div>
             <div class="col">
-              <div  class="button comet glow-button" ><a href="{% url "unlimited-home" %}"><img src = "{% static 'landing/comet-symbol.png' %}" height="100%" width="100%"></a></div>
-              <div  class="button comet glow-button" ></div>
+              <div  class="button comet glow-button" ><a href="{% url "unlimited-home" %}"><img src = "{% static 'landing/comet-symbol.png' %}" height="100%" width="100%" draggable="false"></a></div>
+              <div  class="button die glow-button" ><img src = "{% static 'landing/die-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
             </div>
           </div>
     </body>
