--- a/app/unlimited/templates/unlimited/user_techniques.html
+++ b/app/unlimited/templates/unlimited/user_techniques.html
@@ -12,7 +12,11 @@
             <h2><a class="article-title" href="{% url "technique-detail" tech.slug %}">{{ tech.name }}</a></h2>
             <p class="article-content">{{ tech.content }}</p>
             <div >
+                {% if tech.character %}
                 Used By  <img class="rounded-circle article-img" style="width:5%;height:5%;margin-left:6px;margin-right:6px" src="{{tech.character.image.url}}"><a class="mr-2" href="{% url "character-detail" tech.character.slug %}">{{ tech.character }}</a>
+                {% else %}
+                Used By Nobody
+                {% endif %}
             </div>
             </div>
         </article>
