--- a/app/unlimited/templates/unlimited/base.html
+++ b/app/unlimited/templates/unlimited/base.html
@@ -35,7 +35,7 @@
                     <a class="nav-item nav-link" href="{% url "character-create" %}">New Character</a>
                     {% if user.is_authenticated%}
                       <a class="nav-item nav-link" href="{% url "profile" %}" style="padding-right:0px;"><img class="rounded-circle article-img" src="{{user.profile.pfp.url}}" style="width:30px;height:30px;display:block;margin:0px;"></a>
-                      <a class="nav-item nav-link" href="{% url "profile" %}">{{user.username}}</a>
+                      <a class="nav-item nav-link" href="{% url "profile" %}" style="padding-left:4px;">{{user.username}}</a>
                       <a class="nav-item nav-link" href="{% url "logout" %}">Logout</a>
                     {% else %}
                       <a class="nav-item nav-link" href="{% url "login" %}">Login</a>
