add icons to profile edit

--- a/app/users/templates/users/profile.html
+++ b/app/users/templates/users/profile.html
@@ -4,8 +4,8 @@
 {% block content %}
     <div class="tab">
         <button class="tablinks" onclick="openTab(event, 'edit')">Edit Info <img class="icon" src="{% static "users/edit-icon.png" %}"></button>
-        <button class="tablinks" onclick="openTab(event, 'techniques')">Techniques </button>
-        <button class="tablinks" onclick="openTab(event, 'characters')">Characters </button>
+        <button class="tablinks" onclick="openTab(event, 'techniques')">Techniques <img class="icon" src="{% static "landing/comet-symbol.png" %}"></button>
+        <button class="tablinks" onclick="openTab(event, 'characters')">Characters <img class="icon" src="{% static "users/character-icon.png" %}"></button>
     </div>
     <div id="edit" class="tabcontent">
         <div class="content-section">
