added first about content

--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -1,5 +1,28 @@
 {% extends "unlimited/base.html" %}
 
 {% block content %}
-    <h1>About Page</h1>
+    <h1>About Techniques</h1>
+    <h2>Purpose</h2>
+    <p> Techniques are supplemental abilities unique to your character, that you chose how they grow more powerful. The limit of a techniques power is determined by its tags, which are
+         general descriptors of what your technique does with different point costs associated.
+        Generally techniques can be anything that fits narratively 
+        for your character and within the power limits. 
+        They are not exclusive for combat situations, 
+        to create a technique that does not do damage select the boon/bane tag†. To make techniques an important aspect of a characters they will have 
+        multiple techniques but each can only be used once per session. The GM will create custom partial success options for each technique.
+    <h2>Crunch</h2>
+    <ul>
+        <li> Characters have a pool of points equal to 10+2*LVL.<li>
+        <li> A technique can have a maximum value of ⅔ of a character's total pool†.<li>
+        <li> Players choose which attribute each technique rolls<li>
+        <li> There are four tiers of tags with increasing cost†.<li>
+        <li> Some tags have multiple tiers, which require more points.<li>
+    <ul>
+    <h2>Guide to Tags<h2>
+    <dl>
+        <dt></dt>
+        <dd>- black hot drink</dd>
+        <dt>Milk</dt>
+        <dd>- white cold drink</dd>
+    </dl>    
 {% endblock content%}
