--- a/app/unlimited/templates/unlimited/base.html
+++ b/app/unlimited/templates/unlimited/base.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarToggle"> 
                   <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{% url "unlimited-home" %}">Home</a>
-                    <a class="nav-item nav-link" href="{% url "unlimited-about" %}">About</a>
+                    <a class="nav-item nav-link" href="{% url "unlimited-about" %}">About Techniques</a>
                   </div>
                   <!-- Navbar Right Side -->
                   <div class="navbar-nav">
