--- a/app/unlimited/templates/unlimited/home.html
+++ b/app/unlimited/templates/unlimited/home.html
@@ -1,6 +1,6 @@
 {% extends "unlimited/base.html" %}
 {% block content %}
-    <h1>Blog Home!</h1>
+    <h1>Player Techniques</h1>
     {% for tech in techniques%}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{tech.author.profile.pfp.url}}">
