--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -14,10 +14,10 @@
     <ul>
         <li> Characters have a pool of points equal to 10+2*LVL.</li>
         <li> A technique can have a maximum value of ⅔ of a character's total pool†.</li>
-        <li> Players choose which attribute each technique rolls</li>
+        <li> Techniques are rolled +LVL</li>
         <li> There are four tiers of tags with increasing cost†.</li>
         <li> Some tags have multiple tiers, which require more points.</li>
-        <li> The base damage for techniques is 2d6+3.</li>
+        <li> The base damage for techniques is 2d6.</li>
     </ul>
     <h2>Guide to Tags</h2>
     <div id="accordion">
@@ -51,7 +51,13 @@
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
             <div class="card-body">
-             <!-- TODO -->
+              <dl>
+                <dt>Multitarget</dt>
+                <dd>How many places or people or things a technique can target. Default value is 1, every 2 points raises the number of targets by 1.</dd>
+                <dt>Area</dt>
+                <dd>How large of an area the technique affects. Default is no area.</dd>
+                <dd>Small area is about the size of bathroom.</dd>
+              </dl> 
             </div>
           </div>
         </div>
