--- a/app/unlimited/templates/unlimited/about.html
+++ b/app/unlimited/templates/unlimited/about.html
@@ -55,8 +55,7 @@
                 <dt>Multitarget</dt>
                 <dd>How many places or people or things a technique can target. Default value is 1, every 2 points raises the number of targets by 1.</dd>
                 <dt>Area</dt>
-                <dd>How large of an area the technique affects. Default is no area.</dd>
-                <dd>Small area is about the size of bathroom.</dd>
+                <dd>How large of an area the technique affects. Default is no area. Small area is about the size of a bedroom, medium is  </dd>
               </dl> 
             </div>
           </div>
