--- a/app/unlimited/templates/unlimited/character_detail.html
+++ b/app/unlimited/templates/unlimited/character_detail.html
@@ -1,17 +1,6 @@
 {% extends "unlimited/base.html" %}
 {% block content %}
-    <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{object.image.url}}">
-        <div class="media-body">
-        <div class="article-metadata">
-            <a class="mr-2" href="{% url "user-techniques" object.player.username %}">{{ object.player }}</a>
-            <small class="text-muted">{{ object.date_created|date:"F j, Y" }}</small>
-           
-        </div>
-        <h2 class="article-title"> {{ object.name }}</h2>
-        <p class="article-content">{{ object.level }}</p>
-        </div>
-    </article>
+    {% include "unlimited/character.html" %}
     {% if object.player == user%}
     <a class="btn btn-secondary btn-sm mb-1" href="{% url "character-update" object.slug %}">Edit</a>
     <a class="btn btn-danger btn-sm mb-1" href="{% url "character-delete" object.slug %}">Delete</a>
