--- a/app/unlimited/templates/unlimited/character.html
+++ b/app/unlimited/templates/unlimited/character.html
@@ -8,6 +8,9 @@
        
     </div>
     <h2 class="article-title"> {{ object.name }}</h2>
-    <p class="article-content">{{ object.level }}</p>
+    <p class="article-content">Level: {{ object.level }}</p>
+    <p class="article-content">Pool: {{ object.point_pool }}</p>
+    <p class="article-content">Current: {{ object.current_points }}</p>
+    
     </div>
 </article>
