--- a/app/landing/templates/landing/landing.html
+++ b/app/landing/templates/landing/landing.html
@@ -22,14 +22,14 @@
     <body>
         <div class="flex-grid">
             <div class="col">
-              Moves<div  class="button book glow-button" ><img src = "{% static 'landing/book-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
-              Wiki<div  class="button scroll glow-button" ><img src = "{% static 'landing/scroll-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
+              <h2>Moves</h2><div  class="button book glow-button" ><img src = "{% static 'landing/book-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
+              <h2>Wiki</h2><div  class="button scroll glow-button" ><img src = "{% static 'landing/scroll-symbol.png' %}" height="100%" width="100%" draggable="false"></div>
             </div>
             <div class="col">
-              Techniques<div  class="button comet glow-button" ><a href="{% url "unlimited-home" %}"><img src = "{% static 'landing/comet-symbol.png' %}" height="100%" width="100%" draggable="false"></a></div>
-              Dice<div  class="button die glow-button" ><img src = "{% static 'landing/die-symbol.png' %}"  height="100%" width="100%" draggable="false"></div>
+              <h2>Techniques</h2><div  class="button comet glow-button" ><a href="{% url "unlimited-home" %}"><img src = "{% static 'landing/comet-symbol.png' %}" height="100%" width="100%" draggable="false"></a></div>
+              <h2>Dice</h2><div  class="button die glow-button" ><img src = "{% static 'landing/die-symbol.png' %}"  height="100%" width="100%" draggable="false"></div>
             </div>
-          </div>
+        </div>
     </body>
 </html>       
 {% endblock content%}
