--- a/app/unlimited/templates/unlimited/technique.html
+++ b/app/unlimited/templates/unlimited/technique.html
@@ -1,6 +1,6 @@
 {% load static %}
 <article class="media content-section">
-    {% if tech.character %}
+    {% if object.character %}
     <img class="rounded-circle article-img" src="{{object.character.image.url}}">
     {% else %}
     <img class="rounded-circle article-img" src="{% static "unlimited/default.jpg"%}">
@@ -16,9 +16,9 @@
         <small class="text-muted">{{ tech.date_created|date:"F j, Y" }}</small>
        
     </div>
-    <h2 class="article-title"> {{ object.name }}</h2>
+    <h2 class="article-title"><a href="{% url "technique-detail" object.slug %}"> {{ object.name }}</a></h2>
     <p class="article-content">{{ object.content }}</p>
-        <div >
+        <div>
            Created By <img class="rounded-circle article-img" style="width:5%;height:5%;margin-left:6px;margin-right:6px" src="{{object.author.profile.pfp.url}}"><a class="mr-2" href="{% url "user-techniques" object.author.username %}">{{ object.author }}</a>
         </div>
     </div>
